[package]
name = "farm_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "MouseEvent",
  "HtmlImageElement",
  "HtmlSelectElement",
  "HtmlElement",
  "DomTokenList",
  "HtmlElement", 
  "CssStyleDeclaration", 
]