[package]
name = "farm_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
wasm-bindgen-futures = "0.4" 
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlAudioElement", 
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "MouseEvent",
    "Window",
    "Storage",
    "Location",
    "console",
    "HtmlElement",
    "DragEvent",
    "DataTransfer",
    "EventTarget",
    "Event",
    "HtmlCollection",
    "NodeList",
    "DomTokenList",
    "CssStyleDeclaration"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0